fixed some text alignment problems in small devices

--- a/src/App.css
+++ b/src/App.css
@@ -218,7 +218,11 @@ html:fullscreen {
     width: 70px;
   }
 
+  #wt {
+    width: 62vw;
+  }
+  
   #bt {
-    max-width: 100%;
+    width: 62vw;
   }
 }
